--- a/EURISTest/Content/Site.css
+++ b/EURISTest/Content/Site.css
@@ -524,6 +524,16 @@ input[type="checkbox"].input-validation-error {
     display: none;
 }
 
+.display-label {
+    margin-top: 10px;
+    display: block;
+}
+
+.display-field {
+    display: block;
+    font-size: 1.2em;
+    font-weight: 600;
+}
 
 /* tables
 ----------------------------------------------------------*/
